--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,11 +15,11 @@ html
         span(class= 'title-wraper')  
           p(class= 'title-section') EDUCATION
         span(class= 'title-wraper') 
-          p(class= 'title-section') EXPERIENCE
+          p(class= 'title-section') EXPERIENCES
         span(class= 'title-wraper')
           p(class= 'title-section') SKILLS
         span(class= 'title-wraper')
-          p(class= 'title-section') INTEREST
+          p(class= 'title-section') INTERESTS
 - var n=0
     block mainbody
      
