--- a/public/css/style.css
+++ b/public/css/style.css
@@ -288,6 +288,8 @@ body{
 
 .timeline {
     position: relative;
+    padding-top: 25px;
+    padding-bottom: 25px;;
     margin: 0 auto;
     height:auto;
     background-color: white;
@@ -372,7 +374,7 @@ body{
   
 
   .content {
-    
+    margin-bottom: 15px;;
     background-color: white;
     position: relative;
     border-radius: 6px;
