--- a/views/index.pug
+++ b/views/index.pug
@@ -20,7 +20,7 @@ mixin elem-skills(name,percent_string,style_prop)
 block mainbody
     div#mainContainer 
         - var list_experience=[["Aug 2021-now",'Engineer - Computer Science','Crédit Agricole Consumer Finance','I was in charge of the ServiceNow Platform, it\'s administration and developpement on it'],['May 2021- August 2021','Internship - Computer Science','Crédit Agricole Consumer Finance','In charge of developpement on ServiceNow']]
-        - var list_education=[["Sept 2020- Sept 2022",'Master, specialized in Cybersecurity','ISEN Lille, Engineering School','Courses Taken : Secured Network, Advanced Network, Pentesting, Computer Forensic, Cryptography, Web Developpement Security, Application Developpement Security, Python Scripting, Network Programmation, Operating System(linux).'],["Sept 2019- Aug 2020",'Generalist Year','ISEN Lille, Engineering School','Courses Taken : Computer Science (Network and DataBase), Mathematics, Physic, Electronic, Automatic, Signal Analisis'],["Sept 2017- Aug 2020",'Preparatory Class','ISEN Lille, Engineering School','The French preparatory are an intensive two-year post- baccalauréat courses designed to prepare the students for entry into the Grandes Écoles. Courses Taken : Mathematics, Physics, Engineer Science, English, French Litterature.']]
+        - var list_education=[["Sept 2020- Sept 2022",'Master, specialized in Cybersecurity','ISEN Lille, Engineering School','Courses Taken : Secured Network, Advanced Network, Pentesting, Computer Forensic, Cryptography, Web Developpement Security, Application Developpement Security, Python Scripting, Network Programmation, Operating System(linux).'],["Sept 2019- Aug 2020",'Generalist Year','ISEN Lille, Engineering School','Courses Taken : Computer Science (C, Network and DataBase), Mathematics, Physic, Electronic, Automatic, Signal Analisis'],["Sept 2017- Aug 2020",'Preparatory Class','ISEN Lille, Engineering School','The French preparatory are an intensive two-year post- baccalauréat courses designed to prepare the students for entry into the Grandes Écoles. Courses Taken : Mathematics, Physics, Engineer Science, English, French Litterature.']]
         - var list_skills=[["Javascript/AngularJs/NodeJs",'80%','width:80%;'],['Python','80%',"width:80%;"],['Network','70%',"width:70%;"],['System Administration (linux)','60%',"width:60%;"],["PHP/MySQL/MongoDB",'75%',"width:75%;"],['HTML/CSS','90%',"width:90%;"]]
 
         div(class='container-content')
@@ -46,6 +46,7 @@ block mainbody
                         li(class="list-elem-about")
                             strong(class="title-elem-about") PHONE
                             span +33 6 64 28 56 73
+                            
             div#media
                 a(class="linked-icons-about", href="https://github.com/ERAUDBERTHAUDHugo")
                     i.fa.fa-github(class="icon-about", aria-hidden='true')
@@ -65,12 +66,12 @@ block mainbody
         
 
         div(class="title-section-container") Education
-        div(class="timeline container-content ")    
+        div(class="timeline container-content ", id="education")    
             for details in list_education
                 +elem-timeline(details[0],details[1],details[2],details[3])
 
         div(class="title-section-container") Professional Experiences
-        div(class="timeline container-content ")    
+        div(class="timeline container-content ")#experience    
             for details in list_experience
                 +elem-timeline(details[0],details[1],details[2],details[3])
 
@@ -79,6 +80,22 @@ block mainbody
             div(class='skill-container-content')#skills
                 for skills in list_skills
                     +elem-skills(skills[0],skills[1],skills[2])
+
+        div(class="title-section-container") My Interests
+        div(class='container-content')
+            div#interests
+                div.interest-container
+                    p.test-interests Reading
+                    i.fa.fa-book-open.icon-interests  
+                div.interest-container 
+                    p.test-interests Cycling   
+                    i.fa.fa-bicycle.icon-interests
+                div.interest-container
+                    p.test-interests Computer Science   
+                    i.fa.fa-laptop-code.icon-interests
+                div.interest-container
+                    p.test-interests Role playing Game
+                    i.fa.fa-dice-d20.icon-interests
 
 
         
