--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,7 @@ html
     title= pagetitle
     meta(charset="utf-8")
     meta(name="viewport" content="width=device-width, initial-scale=1")
-    script(src="../public/js/test.js")
+    
     script(src="https://kit.fontawesome.com/e4339b56d6.js" crossorigin="anonymous")
     link(rel="stylesheet" href="../public/css/style.css")
   body
@@ -25,3 +25,4 @@ html
      
     footer
       p footer :)
+    script(src="../public/js/index.js")
