--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,5 +24,9 @@ html
     block mainbody
      
     footer
-      p footer :)
+      div#media
+        a(class="linked-icons-about", href="https://github.com/ERAUDBERTHAUDHugo")
+            i.fa.fa-github(class="icon-about", aria-hidden='true')
+        a(class="linked-icons-about", href="https://www.linkedin.com/in/hugo-eraud-berthaud/")   
+            i.fa.fa-linkedin.xl(class="icon-about", aria-hidden='true')
     script(src="../public/js/index.js")
